k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockticker-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: stockticker
  ports:
    - port: 80
      targetPort: 8080
